--- a/p8104_hw3_zz2603.Rmd
+++ b/p8104_hw3_zz2603.Rmd
@@ -10,6 +10,8 @@ knitr::opts_chunk$set(echo = TRUE)
 
 library(tidyverse)
 library(p8105.datasets)
+library(httr)
+library(jsonlite)
 
 ```
 
@@ -89,9 +91,88 @@ We loaded the data *instacart* from the P8105.datasets. There are `r dim(instaca
 * the table above show the mean hour per day for products Coffee Ice Cream and	Pink Lady Apples.  It seems that people on Wednesday will spent relatively more times in ordering ice cream and apples than weekends on average.  
 
 
-```{r problem 2}
+```{r problem 2, out.width="80%"}
+data("brfss_smart2010")
+tidybrftbl <- brfss_smart2010 %>% 
+  janitor::clean_names() %>% 
+  filter(topic=="Overall Health") %>% 
+  filter(response=="Excellent"|response=="Very good"|
+           response=="Good"|response=="Fair"|
+           response=="Poor") %>% 
+  mutate(response=forcats::fct_relevel(response,
+                                       c("Poor",
+                                         "Fair",
+                                         "Good",
+                                         "Very good",
+                                         "Excellent")))
 
+## In 2002, which states were observed at 7 or more locations? What about in 
+## 2010?
+loctbl_year <- tidybrftbl %>% 
+  filter(year==2010|year==2002) %>% 
+  group_by(year,locationabbr,locationdesc) %>% 
+  summarize(n=n()) %>% 
+  count(locationabbr,name = "num_loc") %>% 
+  filter(num_loc>6)
+loctbl_year
+
+## in 2002, the states observed with more than or equal to 7 locations
+loctbl_year %>% 
+  filter(year==2002) %>% 
+  pull(locationabbr)
+
+## in 2010, the states observed with more than or equal to 7 location
+loctbl_year %>% 
+  filter(year==2010) %>% 
+  pull(locationabbr)
+
+## Construct a dataset that is limited to Excellent responses, and contains, 
+## year, state, and a variable that averages the data_value across locations 
+## within a state. Make a “spaghetti” plot of this average value over time 
+## within a state (that is, make a plot showing a line for each state across 
+## years – the geom_line geometry and group aesthetic will help). 
+exctbl <- tidybrftbl %>% 
+  filter(response=="Excellent") %>% 
+  group_by(year,locationabbr,locationdesc) %>% 
+  summarize(mean_value=mean(data_value,na.rm = TRUE))
+
+ggplot(exctbl,aes(x=year,y=mean_value))+
+  geom_line(aes(group=locationabbr))+
+  labs(
+    x="Year",
+    y="Mean of data values",
+    title = "Mean of data values for each state across years"
+  )+
+  theme(
+    axis.title = element_text(face = "bold"),
+    plot.title = element_text(face = "bold")
+  )
+
+## Make a two-panel plot showing, for the years 2006, and 2010, distribution 
+## of data_value for responses (“Poor” to “Excellent”) among locations in NY 
+## State.
+tidybrftbl %>% 
+  filter(year==2006|year==2010&locationabbr=="NY") %>% 
+  group_by(locationdesc,response) %>% 
+  ggplot(aes(x=response,y=data_value))+geom_violin()+
+  labs(
+    x="Response",
+    y="Data values",
+    title="data values vs. responses in 2006 and 2010"
+  )+
+  theme(axis.title = element_text(face = "bold"),
+        plot.title = element_text(face = "bold"))+
+  facet_grid(.~year)
 
 ```
+## short description for each question
+* The abbreviation of states with equal to or more than 7 states are shown above.The number of states in 2010 is more than number of states in 2002.
+* The plot about average data values among "Excellent" response over time within a state is shown above. Although plot seems quite messy with great volatity, the general trend of mean values for each state decrease slightly from 2002 to 2010.
+* The violin plot about the distribution of data values for responses among location in NY states in 2006 and 2010 is shown above.  In two years, the general trend of response looks similar. The "Very good" response is always the highest and "Poor" response is the lowest.  The distribution of data values in 2010 was generally skewed to left for each response (except "Poor"); the distribution of data values in 2002 was generally seems in balanced for each response (except "Poor").
+
+```{r}
+
+```
+
 
 
